--- a/pages/shop.html
+++ b/pages/shop.html
@@ -11,15 +11,82 @@
 <body>
     <div class="main-container">
         <header>
+
             <div class="score">
                 <img src="../static/images/currency.png" alt="coin"><span>0</span>
             </div>
 
             <div class="items">
-                <div class="energy-update">
-                    <img src="" alt="">
+                <div>
+
+                    <div class="energy-update">
+                        <img src="../static/images/items/1000-energy.png" alt="energy">
+                        <div class="item-info">
+                            <p class="item-name">Energy Limit</p>
+                            <p class="item-description">Повышение энергии на 1000</p>
+                            <div class="item-data">
+                                <div class="item-lvl">
+                                    <span>0 LVL</span>
+                                </div>
+                                <div class="item-price">
+                                    <span>5000</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="energy-update">
+                        <img src="../static/images/items/1000-energy.png" alt="energy">
+                        <div class="item-info">
+                            <p class="item-name">Energy Limit</p>
+                            <p class="item-description">Повышение энергии на 1000</p>
+                            <div class="item-data">
+                                <div class="item-lvl">
+                                    <span>0 LVL</span>
+                                </div>
+                                <div class="item-price">
+                                    <span>5000</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <div>
+
+                    <div class="energy-update">
+                        <img src="../static/images/items/1000-energy.png" alt="energy">
+                        <div class="item-info">
+                            <p class="item-name">Energy Limit</p>
+                            <p class="item-description">Повышение энергии на 1000</p>
+                            <div class="item-data">
+                                <div class="item-lvl">
+                                    <span>0 LVL</span>
+                                </div>
+                                <div class="item-price">
+                                    <span>5000</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="energy-update">
+                        <img src="../static/images/items/1000-energy.png" alt="energy">
+                        <div class="item-info">
+                            <p class="item-name">Energy Limit</p>
+                            <p class="item-description">Повышение энергии на 1000</p>
+                            <div class="item-data">
+                                <div class="item-lvl">
+                                    <span>0 LVL</span>
+                                </div>
+                                <div class="item-price">
+                                    <span>5000</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+
         </header>
 
         <footer>
