--- a/pages/shop.html
+++ b/pages/shop.html
@@ -91,7 +91,7 @@
 
         <footer>
             <div class="select-menu">
-                <a href="index.html" class="menu-item">
+                <a href="../index.html" class="menu-item">
                     <div class="menu-icon-container">
                         <img src="../static/images/bulb/light bulb 5.png" alt="Платформа" class="menu-icon">
                     </div>
