Update and Fixed site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Clicker</title>
     <link rel="icon" href="static/images/coin.png">
     <link rel="stylesheet" href="static/styles/style.css">
+    <script src="static/scripts/script.js" defer></script>
 </head>
 <body>
     <div class="main-container">
