Adding a backend, as well as correcting errors

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
             </div>
 
             <div class = "profile-level">
-                TITAN
+                <span id="level-name">NOVICE</span>
                 <div class="level-bar">
-                    <div class="level-process", style="width: 75%;"></div>
+                    <div class="level-process", id="level-process" style="width: 1%;"></div>
                 </div>
             </div>
 
             <div class="score">
-                <h2>0</h2>
+                <h2 id="score">0</h2>
             </div>
 
-            <div class="coin">
+            <div class="coin" id="coin">
                 <img src="static/images/coin.png" alt="coin">
-                <div class="click-anim"></div>
             </div>
 
             <div class="energy">
-                <img src="static/images/bulb/light bulb 5.png" alt="energy">1000
+                <img src="static/images/bulb/light bulb 5.png" alt="energy">
+                <span id="energy-limit">1000</span>
             </div>
         </header>
 
@@ -47,27 +47,27 @@
             <div class="select-menu">
                 <a href="index.html" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="static/images/bulb/light bulb 5.png" alt="Платформа" class="menu-icon">
+                        <img src="static/images/bulb/light bulb 5.png" alt="Mining" class="menu-icon">
                     </div>
-                    <span>Платформа</span>
+                    <span>Mining</span>
                 </a>
                 <a href="pages/shop.html" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="static/images/bulb/light bulb 5.png" alt="Лавка" class="menu-icon">
+                        <img src="static/images/bulb/light bulb 5.png" alt="Shop" class="menu-icon">
                     </div>
-                    <span>Лавка</span>
+                    <span>Shop</span>
                 </a>
-                <a href="pages/friends.html" class="menu-item">
+                <a href="#!" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="static/images/bulb/light bulb 5.png" alt="Друзья" class="menu-icon">
+                        <img src="static/images/bulb/light bulb 5.png" alt="Friend" class="menu-icon">
                     </div>
-                    <span>Друзья</span>
+                    <span>Friend</span>
                 </a>
-                <a href="pages/tasks.html" class="menu-item">
+                <a href="#!" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="static/images/bulb/light bulb 5.png" alt="Задания" class="menu-icon">
+                        <img src="static/images/bulb/light bulb 5.png" alt="Tasks" class="menu-icon">
                     </div>
-                    <span>Задания</span>
+                    <span>Tasks</span>
                 </a>
             </div>
         </footer>
