--- a/pages/shop.html
+++ b/pages/shop.html
@@ -19,9 +19,9 @@
             </div>
 
             <div class="items">
-                <div>
 
-                    <div class="energy-update">
+                <div>
+                    <div class="item">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
                             <p class="item-name">Energy Limit</p>
@@ -37,7 +37,7 @@
                         </div>
                     </div>
 
-                    <div class="energy-update">
+                    <div class="item">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
                             <p class="item-name">Energy Limit</p>
@@ -53,9 +53,9 @@
                         </div>
                     </div>
                 </div>
-                <div>
 
-                    <div class="energy-update">
+                <div>
+                    <div class="item">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
                             <p class="item-name">Energy Limit</p>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
 
-                    <div class="energy-update">
+                    <div class="item">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
                             <p class="item-name">Energy Limit</p>
@@ -121,4 +121,5 @@
         </footer>
     </div>
 </body>
+
 </html>
