Add task management and enhance shop features
- Implemented task management page with associated UI and logic
- Enhanced shop page with updated JavaScript
- Refactored main script to integrate new features
- Updated and added styles for new and existing pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="static/images/profile.png" alt="profile">
                 </div>
                 <div class="profile-name">
-                    Максим
+                    <span id="user-name">Слон</span>
                 </div>
                 <div class="settings"></div>
             </div>
@@ -38,8 +38,8 @@
             </div>
 
             <div class="energy">
-                <img src="static/images/bulb/light bulb 5.png" alt="energy">
-                <span id="energy-limit">1000</span>
+                <img src="static/images/bulb/light bulb 5.png" alt="energy" id="energy-image">
+                <span id="energy-limit">2000</span>
             </div>
         </header>
 
@@ -50,6 +50,7 @@
                         <img src="static/images/bulb/light bulb 5.png" alt="Mining" class="menu-icon">
                     </div>
                     <span>Mining</span>
+                    <div class="strip-page"></div>
                 </a>
                 <a href="pages/shop.html" class="menu-item">
                     <div class="menu-icon-container">
@@ -63,7 +64,7 @@
                     </div>
                     <span>Friend</span>
                 </a>
-                <a href="#!" class="menu-item">
+                <a href="pages/tasks.html" class="menu-item">
                     <div class="menu-icon-container">
                         <img src="static/images/bulb/light bulb 5.png" alt="Tasks" class="menu-icon">
                     </div>
