--- a/pages/shop.html
+++ b/pages/shop.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../static/images/coin.png">
     <link rel="stylesheet" href="../static/styles/style.css">
     <link rel="stylesheet" href="../static/styles/shop-style.css">
+    <script src="../static/scripts/shop.js" defer></script>
 </head>
 
 <body>
@@ -15,39 +16,40 @@
         <header>
 
             <div class="score">
-                <img src="../static/images/currency.png" alt="coin"><span>0</span>
+                <img src="../static/images/currency.png" alt="coin">
+                <span id="score">0</span>
             </div>
 
             <div class="items">
 
                 <div>
-                    <div class="item">
+                    <div class="item" id="add-energy">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
                             <p class="item-name">Energy Limit</p>
                             <p class="item-description">Повышение энергии на 1000</p>
                             <div class="item-data">
                                 <div class="item-lvl">
-                                    <span>0 LVL</span>
+                                    <span id="add-energy-lvl">0 LVL</span>
                                 </div>
                                 <div class="item-price">
-                                    <span>5000</span>
+                                    <span id="add-energy-price">500</span>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item" id="autoclicker">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
-                            <p class="item-name">Energy Limit</p>
-                            <p class="item-description">Повышение энергии на 1000</p>
+                            <p class="item-name">AutoClicker</p>
+                            <p class="item-description">Автоматически кликает раз в секунду</p>
                             <div class="item-data">
                                 <div class="item-lvl">
-                                    <span>0 LVL</span>
+                                    <span id="autoclicker-lvl">0 LVL</span>
                                 </div>
                                 <div class="item-price">
-                                    <span>5000</span>
+                                    <span id="autoclicker-price">7000</span>
                                 </div>
                             </div>
                         </div>
@@ -55,33 +57,17 @@
                 </div>
 
                 <div>
-                    <div class="item">
+                    <div class="item" id="click-power">
                         <img src="../static/images/items/1000-energy.png" alt="energy">
                         <div class="item-info">
-                            <p class="item-name">Energy Limit</p>
-                            <p class="item-description">Повышение энергии на 1000</p>
+                            <p class="item-name">Click Power</p>
+                            <p class="item-description">Увеличивает силу клика</p>
                             <div class="item-data">
                                 <div class="item-lvl">
-                                    <span>0 LVL</span>
+                                    <span id="click-power-lvl">0 LVL</span>
                                 </div>
                                 <div class="item-price">
-                                    <span>5000</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <img src="../static/images/items/1000-energy.png" alt="energy">
-                        <div class="item-info">
-                            <p class="item-name">Energy Limit</p>
-                            <p class="item-description">Повышение энергии на 1000</p>
-                            <div class="item-data">
-                                <div class="item-lvl">
-                                    <span>0 LVL</span>
-                                </div>
-                                <div class="item-price">
-                                    <span>5000</span>
+                                    <span id="click-power-price">10000</span>
                                 </div>
                             </div>
                         </div>
@@ -95,27 +81,28 @@
             <div class="select-menu">
                 <a href="../index.html" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="../static/images/bulb/light bulb 5.png" alt="Платформа" class="menu-icon">
+                        <img src="../static/images/bulb/light bulb 5.png" alt="Mining" class="menu-icon">
                     </div>
-                    <span>Платформа</span>
+                    <span>Mining</span>
                 </a>
                 <a href="shop.html" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="../static/images/bulb/light bulb 5.png" alt="Лавка" class="menu-icon">
+                        <img src="../static/images/bulb/light bulb 5.png" alt="Shop" class="menu-icon">
                     </div>
-                    <span>Лавка</span>
+                    <span>Shop</span>
+                    <div class="strip-page"></div>
                 </a>
-                <a href="friends.html" class="menu-item">
+                <a href="#!" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="../static/images/bulb/light bulb 5.png" alt="Друзья" class="menu-icon">
+                        <img src="../static/images/bulb/light bulb 5.png" alt="Friend" class="menu-icon">
                     </div>
-                    <span>Друзья</span>
+                    <span>Friend</span>
                 </a>
                 <a href="tasks.html" class="menu-item">
                     <div class="menu-icon-container">
-                        <img src="../static/images/bulb/light bulb 5.png" alt="Задания" class="menu-icon">
+                        <img src="../static/images/bulb/light bulb 5.png" alt="Tasks" class="menu-icon">
                     </div>
-                    <span>Задания</span>
+                    <span>Tasks</span>
                 </a>
             </div>
         </footer>
