Added a panel with income per sec and Fixed bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clicker</title>
+    <title>ELUM</title>
     <link rel="icon" href="static/images/coin.png">
     <link rel="stylesheet" href="static/styles/style.css">
     <script src="static/scripts/script.js" defer></script>
@@ -17,7 +17,7 @@
                     <img src="static/images/profile.png" alt="profile">
                 </div>
                 <div class="profile-name">
-                    <span id="user-name">Слон</span>
+                    <span id="user-name">ELUM</span>
                 </div>
                 <div class="settings"></div>
             </div>
@@ -36,10 +36,18 @@
             <div class="coin" id="coin">
                 <img src="static/images/coin.png" alt="coin">
             </div>
-
-            <div class="energy">
-                <img src="static/images/bulb/light bulb 5.png" alt="energy" id="energy-image">
-                <span id="energy-limit">2000</span>
+            <div class="dashboard-metrics">
+                <div class="energy">
+                    <img src="static/images/bulb/light bulb 5.png" alt="energy" id="energy-image">
+                    <span id="energy-limit">1000</span>
+                </div>
+                <div class="income">
+                    <p>Income Per Second</p>
+                    <div class="content">
+                        <img src="static/images/coin.png" alt="coin">
+                        <span id="income">0</span>
+                    </div>
+                </div>
             </div>
         </header>
 
