Added Tasks and Fixed Bugs

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -92,7 +92,7 @@
                     <span>Shop</span>
                     <div class="strip-page"></div>
                 </a>
-                <a href="#!" class="menu-item">
+                <a href="friends.html" class="menu-item">
                     <div class="menu-icon-container">
                         <img src="../static/images/bulb/light bulb 5.png" alt="Friend" class="menu-icon">
                     </div>
