--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <span>Shop</span>
                 </a>
-                <a href="#!" class="menu-item">
+                <a href="pages/friends.html" class="menu-item">
                     <div class="menu-icon-container">
                         <img src="static/images/bulb/light bulb 5.png" alt="Friend" class="menu-icon">
                     </div>
