--- a/pages/friends.html
+++ b/pages/friends.html
@@ -4,56 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clicker</title>
-    <link rel="icon" href="../static/images/coin.png">
+    <title>ELUM</title>
+    <link rel="icon" href="static/images/coin.png">
     <link rel="stylesheet" href="../static/styles/style.css">
-    <link rel="stylesheet" href="../static/styles/tasks-style.css">
-    <script src="../static/scripts/tasks.js" defer></script>
+    <link rel="stylesheet" href="../static/styles/friends.css">
+    <script src="../static/scripts/friends.js" defer></script>
 </head>
 
 <body>
     <div class="main-container">
         <header>
+            <div class="dashboard">
+                <div>
+                    <div class="friends-count">
+                        <p>Friends</p>
+                        <span id="friends-count">10</span>
+                    </div>
+    
+                    <div class="friends-income">
+                        <img src="../static/images/coin.png" alt="coin">
+                        <span id="friends-income">0</span>
+                    </div>
+                </div>
 
-            <div class="task" data-id="sub_yt_ch" data-url="https://www.youtube.com">
-                <div class="logo">
-                    <img src="../static/images/tasks/youtube-logo.png" alt="logo">
-                </div>
-                <div class="task-name">
-                    <span>Подписаться на канал</span>
-                </div>
-                <div class="task-reward">
+                <div class="money">
                     <img src="../static/images/coin.png" alt="coin">
-                    <span>3000</span>
+                    <span id="score">0</span>
                 </div>
             </div>
-
-            <div class="task" data-id="sub_tg_ch" data-url="https://t.me/zov_semgi">
-                <div class="logo">
-                    <img src="../static/images/tasks/telegram-logo.png" alt="logo">
-                </div>
-                <div class="task-name">
-                    <span>Подписаться на канал</span>
-                </div>
-                <div class="task-reward">
-                    <img src="../static/images/coin.png" alt="coin">
-                    <span>5000</span>
+            <div class="block-con">
+                <p class="refferal-text">Ваша реферальная ссылка</p>
+                <div class="refferal">
+                    <span id="refferal-url">https://t.me/maaks11</span>
+                    <button>Копировать</button>
                 </div>
             </div>
-
-            <div class="task" data-id="see_github_rep" data-url="https://github.com/Tinokil/Hamster">
-                <div class="logo">
-                    <img src="../static/images/tasks/github-logo.png" alt="logo">
-                </div>
-                <div class="task-name">
-                    <span>Посетить GitHub</span>
-                </div>
-                <div class="task-reward">
-                    <img src="../static/images/coin.png" alt="coin">
-                    <span>3000</span>
-                </div>
-            </div>
-
         </header>
 
         <footer>
@@ -75,13 +60,13 @@
                         <img src="../static/images/bulb/light bulb 5.png" alt="Friend" class="menu-icon">
                     </div>
                     <span>Friend</span>
+                    <div class="strip-page"></div>
                 </a>
                 <a href="tasks.html" class="menu-item">
                     <div class="menu-icon-container">
                         <img src="../static/images/bulb/light bulb 5.png" alt="Tasks" class="menu-icon">
                     </div>
                     <span>Tasks</span>
-                    <div class="strip-page"></div>
                 </a>
             </div>
         </footer>
